
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
typedef int fd_set ;
typedef int buf ;


 int printf (char*) ;
 int read (int ,char*,int) ;
 int recv (int,char*,int,int ) ;
 int select (int ,int *,int *,int *,struct timeval*) ;
 int send (int,char*,int,int ) ;
 int write (int,char*,int) ;

void Shell(int s)
{
 int l;
 char buf[512];
 struct timeval time;
 unsigned long ul[2];

 time.tv_sec=1;
 time.tv_usec=0;

 while(1)
 {
  ul[0]=1;
  ul[1]=s;

  l=select(0,(fd_set*)&ul,((void*)0),((void*)0),&time);
  if(l==1)
  {
   l=recv(s,buf,sizeof(buf),0);
   if (l<=0)
   {
    printf("\r\n[-] connection closed.\n");
    return;
   }
   l=write(1,buf,l);
   if (l<=0)
   {
    printf("\r\n[-] connection closed.\n");
    return;
   }
  }
  else
      {
   l=read(0,buf,sizeof(buf));
   if (l<=0)
   {
    printf("\r\n[-] connection closed.\n");
    return;
   }
   l=send(s,buf,l,0);
   if (l<=0)
   {
    printf("\r\n[-] connection closed.\n");
    return;
   }
  }
 }
}
